# django-agent-framework

./: LICENSE  README.md  pyproject.toml
django_agent_framework/: agent.py  memory.py  settings.py  tool.py
django_agent_framework/llm/: models.py
django_agent_framework/llm/providers/: base.py  openai.py
django_agent_framework/models/: __init__.py  agent_config.py
django_agent_framework/providers/: __init__.py  base.py  openai.py
