[build-system]
requires = ["hatchling", "uv-dynamic-versioning>=0.7.0"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
bump = true

[project]
name = "django-agent-framework"
version = "0.0.1"
authors = [
  { name="Matt Aliev", email="toamatvey@gmail.com" },
]
description = "A powerful Django application to build production AI Agents"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "Django>=4.2,<6.0",
    "openai>=1.92.0,<2",
    "anthropic>=0.52.0,<1",
    "google-auth>=2.36.0",
    "requests>=2.32.2",
    "google-genai>=1.24.0,<2",
    "groq>=0.19.0,<1",
]


classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/MeduzaAI/django-agent-framework"
Issues = "https://github.com/MeduzaAI/django-agent-framework/issues"